fixed user icon and sign out button alignment issue

--- a/src/components/logo/Logo.module.scss
+++ b/src/components/logo/Logo.module.scss
@@ -9,8 +9,7 @@ $logoColor: #fff;
 .logoWrapper {
   width: 80px;
   text-align: center;
-  margin-bottom: 22px;
-  height: 80px;
+  height: 87px;
   position: relative;
   cursor: pointer;
 }
