--- a/src/components/users/Users.module.scss
+++ b/src/components/users/Users.module.scss
@@ -2,27 +2,14 @@
   width: 40px;
 }
 
-.userWrapper {
+.mainWrapper {
   display: flex;
   width: 33.333%;
   justify-content: center;
   align-items: center;
   position: relative;
-}
+  flex-direction: column;
 
-.button {
-  color: rgb(160, 236, 255);
-  padding-bottom: 3px;
-  cursor: pointer;
-  width: 67px;
-  top: 45px;
-  font-size: 14px;
-  background: none;
-  outline: none;
-  border: none;
-  border-bottom: 2px solid #0af4ff;
-  left: 50%;
-  transform: translate(-50%, 0);
 }
 
 .currentUserWrapper {
